# made-hpc-hw4

./: .editorconfig  CMakeLists.txt  Dockerfile  README.md  generate_graph.py  show.ipynb
.github/workflows/: analyze.yaml  build.yaml
data/: page_rank.txt  simplified.txt
graph/: CMakeLists.txt
graph/include/: graph.h  graph_utils.hpp  matrix.hpp  page_rank.h  stdafx.h  utils.h  vector.hpp
graph/src/: graph.cpp  main_page_rank.cpp  main_power.cpp  page_rank.cpp  test_mult.cpp  test_power.cpp  test_shtrassen.cpp  test_transpose.cpp  utils.cpp
images/: rank.md
matrix-mul/: CMakeLists.txt
matrix-mul/include/: matrix.h  matrix.hpp  stdafx.h  utils.h  vector.h  vector.hpp
matrix-mul/src/: main.cpp  matrix.cpp  test.cpp  test_power.cpp  test_shtrassen.cpp  utils.cpp  vector.cpp
